# sflr-supply

./: Cargo.toml  README.md
.github/workflows/: deploy.yaml  release.yaml
src/: main.rs
