[package]
name = "sflr-supply-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.7.3"
log = "0.4.17"
env_logger = "0.10.0"
ethers = { version = "2.0", features = ["legacy"] }
