[package]
name = "sflr-supply-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.7.8"
log = "0.4.27"
env_logger = "0.10.2"
ethers = { version = "2.0", features = ["legacy"] }
